Modyfikowanie istniejącej listy zakupów
